# ood

./: .clang-format  README.md
exam_1/: CMakeLists.txt  main.cpp
lab2/WeatherStation/: CMakeLists.txt  main.cpp
lab2/WeatherStation/src/Observer/CDestructionTestObserver/: CDestructionTestObserver.h
lab2/WeatherStation/src/Observer/CObservable/: CObservable.h
lab2/WeatherStation/src/Observer/CPriorityTestObserver/: CPriorityTestObserver.h
lab2/WeatherStation/src/Observer/IObservable/: IObservable.h
lab2/WeatherStation/src/Observer/IObserver/: IObserver.h
lab2/WeatherStation/src/WeatherData/CDisplay/: CDisplay.cpp  CDisplay.h
lab2/WeatherStation/src/WeatherData/CStatisticData/: CStatisticData.cpp  CStatisticData.h
lab2/WeatherStation/src/WeatherData/CStatsDisplay/: CStatsDisplay.cpp  CStatsDisplay.h
lab2/WeatherStation/src/WeatherData/CWeatherData/: CWeatherData.cpp  CWeatherData.h
lab2/WeatherStation/src/WeatherData/SWeatherInfo/: SWeatherInfo.h
lab2/WeatherStation/test/: test.cpp
lab3/Streams/: CMakeLists.txt  main.cpp
lab3/Streams/src/InputStream/: InputStream.h  InputStreamDecorator.h
lab3/Streams/src/OutputStream/: OutputStream.h  OutputStreamDecorator.h
lab3/Streams/src/Series/: Series.h
lab3/Streams/test/: test.cpp  text_file.txt
lab3/coffee/: CMakeLists.txt
lab3/coffee/src/Beverage/: Beverages.h  IBeverage.h
lab3/coffee/src/Condiments/: Condiments.h
lab3/coffee/test/: test.cpp
lab4/Shapes/: CMakeLists.txt  main.cpp
lab4/Shapes/src/Canvas/: CCanvas.h  ICanvas.h  TestCanvas.h
lab4/Shapes/src/Color/: Color.h
lab4/Shapes/src/Designer/: CDesigner.h  IDesigner.h
lab4/Shapes/src/Painter/: CPainter.h
lab4/Shapes/src/PictureDraft/: CPictureDraft.h
lab4/Shapes/src/PictureDraft/Exception/: ShapesIndexOutOfRange.h
lab4/Shapes/src/Point/: CPoint.h
lab4/Shapes/src/Shape/: CEllipse.h  CRectangle.h  CRegularPolygon.h  CShape.h  CTriangle.h
lab4/Shapes/src/Shape/Exception/: InvalidVertexCountException.h
lab4/Shapes/src/ShapeFactory/: CShapeFactory.h  IShapeFactory.h
lab4/Shapes/src/ShapeFactory/Exception/: InvalidNameOfShapeException.h  InvalidParamException.h  InvalidParamsCountException.h
lab4/Shapes/test/: test.cpp
lab5/Editor/: CMakeLists.txt  main.cpp  test_input_file.txt
lab5/Editor/src/Client/CEditor/: CEditor.cpp  CEditor.h
lab5/Editor/src/Client/CMenu/: CMenu.cpp  CMenu.h
lab5/Editor/src/Command/CAbstractCommand/: CAbstractCommand.cpp  CAbstractCommand.h
lab5/Editor/src/Command/CChangeTitleCommand/: CChangeTitleCommand.cpp  CChangeTitleCommand.h
lab5/Editor/src/Command/CDeleteItemCommand/: CDeleteItemCommand.cpp  CDeleteItemCommand.h
lab5/Editor/src/Command/CInsertDocumentItemCommand/: CInsertDocumentItemCommand.cpp  CInsertDocumentItemCommand.h
lab5/Editor/src/Command/CInsertParagraphCommand/: CInsertParagraphCommand.cpp  CInsertParagraphCommand.h
lab5/Editor/src/Command/CReplaceTextParagraphCommand/: CReplaceTextParagraphCommand.cpp  CReplaceTextParagraphCommand.h
lab5/Editor/src/Command/CResizeImageCommand/: CResizeImageCommand.cpp  CResizeImageCommand.h
lab5/Editor/src/Command/ICommand/: ICommand.h
lab5/Editor/src/Content/CImage/: CImage.cpp  CImage.h
lab5/Editor/src/Content/CParagraph/: CParagraph.cpp  CParagraph.h
lab5/Editor/src/Content/Exception/: ImageDoesNotExistException.h  WrongImageSizeException.h
lab5/Editor/src/Content/IImage/: IImage.h
lab5/Editor/src/Content/IParagraph/: IParagraph.h
lab5/Editor/src/Document/CConstDocumentItem/: CConstDocumentItem.cpp  CConstDocumentItem.h
lab5/Editor/src/Document/CDocument/: CDocument.cpp  CDocument.h
lab5/Editor/src/Document/CDocumentItem/: CDocumentItem.cpp  CDocumentItem.h
lab5/Editor/src/Document/IConstDocumentItem/: IConstDocumentItem.h
lab5/Editor/src/Document/IDocument/: IDocument.h
lab5/Editor/src/Document/IDocumentItem/: IDocumentItem.h
lab5/Editor/src/History/CHistory/: CHistory.cpp  CHistory.h
lab5/Editor/src/Storage/CHTMLSaver/: CHTMLSaver.cpp  CHTMLSaver.h
lab5/Editor/src/Storage/IStorage/: IStorage.h
lab5/Editor/test/: test.cpp
lab5/Editor/test/Command/CTestCommand/: CTestCommand.h
lab6/ClassAdapter/: CMakeLists.txt
lab6/ClassAdapter/architecture/: ClassAdapter
lab6/ClassAdapter/src/app/: App.h
lab6/ClassAdapter/src/graphics_lib/: GraphicsLib.h
lab6/ClassAdapter/src/modern_graphics_lib/: ModernGraphicsLib.h
lab6/ClassAdapter/src/shape_drawing_lib/: ShapeDrawingLib.h
lab6/ClassAdapter/test/: test.cpp
lab7/Composite/: CMakeLists.txt  main.cpp
lab7/Composite/src/Common/Color/: Color.h
lab7/Composite/src/Common/Frame/: Frame.h
lab7/Composite/src/Common/Point/: Point.h
lab7/Composite/src/Exception/CEmptyShapeException/: CEmptyShapeException.h
lab7/Composite/src/Exception/CStyleNotExistException/: CStyleNotExistException.h
lab7/Composite/src/Exception/CWrongShapeException/: CWrongShapeException.h
lab7/Composite/src/Exception/CWrongShapeIndexException/: CWrongShapeIndexException.h
lab7/Composite/test/: test.cpp
lab8/GumballMachine/: CMakeLists.txt
lab8/GumballMachine/src/GumballMachine/CGamballMachine/: CGamballMachine.h
lab8/GumballMachine/src/GumballMachine/IGumballMachine/: IGumballMachine.h
lab8/GumballMachine/src/State/CHasQuarterState/: CHasQuarterState.h
lab8/GumballMachine/src/State/CNoQuarterState/: CNoQuarterState.h
lab8/GumballMachine/src/State/CSoldOutState/: CSoldOutState.h
lab8/GumballMachine/src/State/CSoldState/: CSoldState.h
lab8/GumballMachine/test/: test.cpp
lab8/MultiGumballMachine/: CMakeLists.txt
lab8/MultiGumballMachine/src/GumballMachine/CGamballMachine/: CGamballMachine.h
lab8/MultiGumballMachine/src/GumballMachine/CGumballMachine/: CGumballMachine.h
lab8/MultiGumballMachine/src/GumballMachine/IGumballMachine/: IGumballMachine.h
lab8/MultiGumballMachine/src/State/CHasQuarterState/: CHasQuarterState.h
lab8/MultiGumballMachine/test/: test.cpp
lab8/MultiGumballMachineWithMenu/: CMakeLists.txt  main.cpp
lab8/MultiGumballMachineWithMenu/src/GumballMachineController/: GumballMachineController.cpp  GumballMachineController.h
(+129 files in other folders)
